--- a/SASS/common.scss
+++ b/SASS/common.scss
@@ -1,11 +1,26 @@
 @import "_reset";
 @import "_mixin";
 
+html {
+  @media screen and(max-width: 999px) {
+    font-size: 0.8rem;
+  }
+  @media screen and(max-width: 799px) {
+    font-size: 0.7rem;
+  }
+}
 body {
   @include base-fontFamily;
   color: #333;
+  padding-top: 90px;
   p {
     @include base-p;
+  }
+  @media screen and(max-width: 999px) {
+    padding-top: 63px;
+  }
+  @media screen and(max-width: 799px) {
+    padding-top: 43px;
   }
 }
 header {
@@ -22,7 +37,8 @@ header {
     .sub-header {
       display: none;
     }
-    .pc-header {
+    // .pc-header {
+    .h-wrap {
       padding-bottom: 0 !important;
       transition: 0.5s;
     }
@@ -38,13 +54,15 @@ header {
         font-weight: normal;
       }
     }
-    .pc-header {
+    // .pc-header {
+    .h-wrap {
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding-bottom: 0.5rem;
       .h-logo {
-        width: 230px;
+        // width: 230px;
+        width: 18%;
         a {
           text-decoration: none;
           color: #333;
@@ -54,16 +72,18 @@ header {
         }
       }
       .h-nav {
+        width: 79%;
         ul {
           padding: 0;
           display: flex;
           align-items: center;
+          justify-content: right;
           margin: 10px 0;
           li {
             list-style: none;
-            margin-left: 1.8rem;
+            margin-left: 1.75rem;
             font-weight: bold;
-            font-size: 0.9rem;
+            font-size: 14px;
             a {
               text-decoration: none;
               color: #333;
@@ -97,7 +117,8 @@ header {
                 display: none;
               }
               span {
-                padding: 12px 24px 12px 24px !important;
+                padding: 10px 16px !important;
+                font-size: 14px !important;
                 &::after {
                   display: none;
                 }
@@ -106,21 +127,141 @@ header {
           }
         }
       }
+      .overlay {
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        background: rgba(255, 255, 255, 0.95);
+        text-align: center;
+        padding: 64px;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.6s;
+        z-index: 999;
+        &.show {
+          opacity: 1;
+          pointer-events: auto;
+        }
+        #close {
+          position: absolute;
+          top: 3.2vw;
+          right: 4.3vw;
+          cursor: pointer;
+          font-size: 20px;
+        }
+        ul {
+          list-style-type: none;
+          padding: 0;
+          margin: 0;
+          li {
+            margin-top: 2rem;
+            opacity: 0;
+            transform: translateY(16px);
+            transition: opacity 0.3s, transform 0.3s;
+            font-size: 14px;
+            a {
+              color: #333;
+            }
+          }
+        }
+        &.show li {
+          opacity: 1;
+          transform: none;
+          &:nth-child(1) {
+            transition-delay: 0.1s;
+          }
+          &:nth-child(2) {
+            transition-delay: 0.2s;
+          }
+          &:nth-child(3) {
+            transition-delay: 0.3s;
+          }
+          &:nth-child(4) {
+            transition-delay: 0.4s;
+          }
+          &:nth-child(5) {
+            transition-delay: 0.5s;
+          }
+          &:nth-child(6) {
+            transition-delay: 0.6s;
+          }
+          &:nth-child(7) {
+            transition-delay: 0.7s;
+          }
+        }
+      }
     }
   } //wrapper
+  @media screen and(max-width: 999px) {
+    .wrapper {
+      padding: 1rem 40px;
+      .sub-header {
+        margin-top: 0;
+        margin-bottom: 0.5rem;
+      }
+      .h-wrap {
+        align-items: unset;
+        padding-bottom: 0;
+        .h-nav {
+          display: none;
+        }
+        .sp-h-nav {
+          position: absolute;
+          right: 4%;
+          top: 35%;
+        }
+      }
+    }
+  }
+  @media screen and(max-width: 799px) {
+    .wrapper {
+      padding: 14px 4% 10px;
+      .sub-header {
+        display: none;
+      }
+      .h-wrap {
+        align-items: center;
+        padding-bottom: 0;
+        .h-logo {
+          width: 35%;
+          max-width: 185px;
+        }
+        .sp-h-nav {
+          position: static;
+        }
+      }
+    }
+  }
+  @media screen and(min-width: 1000px) {
+    .wrapper .h-wrap {
+      .sp-h-nav,
+      .overlay {
+        display: none;
+      }
+    }
+  }
 }
 .breadCrumb {
-  margin-top: 95px !important;
+  margin-top: 95px;
+  width: 90%;
   ul {
     display: flex;
     padding: 2rem 0 0;
     li {
       list-style: none;
       margin-right: 0.75rem;
-      &:nth-child(2n) {
-        line-height: 18px;
+      background: url(../IMG/common/arrow-right.png) no-repeat right 3px;
+      background-size: 10px;
+      padding-right: 22px;
+      &:last-child {
+        background: none;
       }
     }
+  }
+  @media screen and(max-width: 999px) {
+    margin-top: 85px;
   }
 }
 h1.page-h1 {
@@ -162,10 +303,11 @@ h3 {
   margin-top: 4rem;
 }
 footer {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding: 3rem 1rem;
+  border-bottom: 10px solid #333;
   .footer-container {
-    width: 1000px;
+    max-width: 1000px;
+    width: 100%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -178,16 +320,17 @@ footer {
       .f-logo {
         width: 230px;
         a {
-          // text-decoration: none;
-          // color: #333;
           img {
             width: 100%;
           }
         }
       }
-      .f-address p {
-        margin: 0;
-        letter-spacing: 0;
+      .f-address {
+        margin-top: 1rem;
+        p {
+          margin: 0;
+          letter-spacing: 0;
+        }
       }
     }
     .f-right {
@@ -205,6 +348,45 @@ footer {
           &:hover {
             opacity: 0.6;
             transition: 0.5s;
+          }
+        }
+      }
+    }
+  }
+  @media screen and(max-width: 999px) {
+    .footer-container {
+      .f-left {
+        p.f-p1 {
+          margin-top: 0.5rem;
+          font-weight: bold;
+          font-size: 14px;
+        }
+        .f-logo {
+          width: 160px;
+        }
+        .f-address p {
+          font-size: 14px;
+          letter-spacing: 2px;
+          line-height: 24px;
+        }
+      }
+    }
+  }
+  @media screen and(max-width: 799px) {
+    .footer-container {
+      flex-direction: column-reverse;
+      .f-left {
+        margin-top: 5rem;
+        text-align: center;
+        .f-logo {
+          margin: 0 auto;
+        }
+        .f-address {
+          margin: 2rem 0 1rem;
+          p {
+            font-size: 12px;
+            letter-spacing: 1px;
+            line-height: 18px;
           }
         }
       }
