--- a/CSS/office.css
+++ b/CSS/office.css
@@ -24,45 +24,149 @@ body#office .address table th {
   padding-right: 5rem;
 }
 
+@media screen and (max-width: 999px) {
+  body#office .address table {
+    width: 80%;
+  }
+}
+
 body#office .policy {
   margin: 6rem auto;
+  padding: 3rem 0;
+  background: #f3f3f3;
+}
+
+body#office .policy h2 {
+  font-size: 1.75rem;
+  letter-spacing: 0.1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+body#office .policy h2::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #7db4e6;
+  margin: 1rem auto 0;
+}
+
+body#office .policy .policy-container {
   width: 900px;
+  margin: 5rem auto 0;
 }
 
 body#office .policy .policy-container .policy-wrap {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-bottom: 3rem;
 }
 
-body#office .policy .policy-container .policy-wrap img {
+body#office .policy .policy-container .policy-wrap .policy-img img {
   border-radius: 50%;
   width: 200px;
   height: 200px;
   object-fit: cover;
-  border: 3px solid #ddd;
   padding: 0.5rem;
   font-family: "object-fit: cover;";
   /*IE edge対策js*/
+  border: 1px solid #616161;
+  background: #fff;
 }
 
 body#office .policy .policy-container .policy-wrap .policy-text {
   width: 550px;
 }
 
+body#office .policy .policy-container .policy-wrap .policy-text h3 {
+  font-size: 1.4rem;
+}
+
 body#office .policy .policy-container .policy-wrap .policy-text p {
   text-align: justify;
 }
 
+@media screen and (max-width: 999px) {
+  body#office .policy .policy-container {
+    width: 90%;
+  }
+  body#office .policy .policy-container .policy-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-bottom: 3rem;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-img {
+    width: 20%;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-img img {
+    width: 100%;
+    height: 100%;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-text {
+    width: 73%;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-text p {
+    text-align: justify;
+  }
+}
+
+@media screen and (max-width: 799px) {
+  body#office .policy .policy-container .policy-wrap {
+    display: block;
+    margin-bottom: 5rem;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-img {
+    margin: auto;
+    width: 20%;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-img img {
+    width: 100%;
+    height: 100%;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-text {
+    width: 90%;
+    margin: auto;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-text h3 {
+    text-align: center;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-text p {
+    text-align: center;
+  }
+  body#office .policy .policy-container .policy-wrap .policy-text p br {
+    display: none;
+  }
+}
+
 body#office .self {
   margin: 6rem auto;
-  width: 900px;
+  width: 800px;
+}
+
+body#office .self h2 {
+  font-size: 1.75rem;
+  letter-spacing: 0.1rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+body#office .self h2::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #7db4e6;
+  margin: 1rem auto 0;
 }
 
 body#office .self .self-wrap {
   display: flex;
   justify-content: space-between;
+  align-items: end;
+  margin: 4rem auto 0;
 }
 
 body#office .self .self-wrap .self-img {
@@ -94,5 +198,38 @@ body#office .self .self-wrap .self-text p:nth-child(1) {
 
 body#office .self .self-wrap .self-text p:nth-child(2) {
   color: #605f5f;
+}
+
+@media screen and (max-width: 999px) {
+  body#office .self {
+    width: 82%;
+  }
+  body#office .self .self-wrap {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+  }
+  body#office .self .self-wrap .self-img {
+    margin-top: 0;
+  }
+  body#office .self .self-wrap .self-text {
+    width: 63%;
+  }
+  body#office .self .self-wrap .self-text p {
+    text-align: justify;
+  }
+  body#office .self .self-wrap .self-text p:nth-child(1) {
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: inline-block;
+  }
+  body#office .self .self-wrap .self-text p:nth-child(2) {
+    color: #605f5f;
+    display: inline-block;
+    margin-left: 2rem;
+  }
+  body#office .self .self-wrap .self-text p:nth-child(3) {
+    margin-top: 1rem;
+  }
 }
 /*# sourceMappingURL=office.css.map */
