--- a/CSS/product.css
+++ b/CSS/product.css
@@ -1,5 +1,5 @@
 body#product .product-container {
-  width: 1100px;
+  max-width: 1000px;
   margin: 0 auto;
   flex-wrap: wrap;
   display: flex;
@@ -28,7 +28,7 @@ body#product .product-container .product-box a .pro-cate {
   font-size: 14px;
   color: #fff;
   display: inline-block;
-  padding: 2px 18px 0px;
+  padding: 2px 18px 2px;
   background-color: #333;
   border-radius: 15px;
   font-weight: bold;
@@ -50,6 +50,31 @@ body#product .product-container .product-box a:hover {
 body#product .product-container .product-box a:hover img {
   transform: scale(1.05);
   transition: transform 0.4s;
+}
+
+@media screen and (max-width: 999px) {
+  body#product .product-container {
+    display: block;
+  }
+  body#product .product-container .product-box {
+    width: 85%;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+  }
+}
+
+@media screen and (max-width: 799px) {
+  body#product .product-container .product-box a .pro-cate {
+    font-weight: normal;
+    padding: 0px 8px 0px;
+    font-size: 12px;
+    letter-spacing: 1px;
+  }
+  body#product .product-container .product-box a .pro-name {
+    font-size: 16px;
+    font-weight: bold;
+    margin-top: 0.2rem;
+  }
 }
 
 body#product .product-container .product-box {
