--- a/SASS/top.scss
+++ b/SASS/top.scss
@@ -8,8 +8,9 @@
     height: 85vh;
     margin: 0 auto;
     overflow: hidden;
-    padding-top: 91px;
-    .slide {
+    // padding-top: 5vw;
+    .slide,
+    .sp-slide {
       position: relative;
       height: auto;
       img {
@@ -93,6 +94,55 @@
         }
       }
     }
+    @media screen and(max-width: 999px) {
+      height: 64vh;
+      .cc-wrap {
+        .cc1 {
+          p.txt02 {
+            position: absolute;
+            top: 290px;
+          }
+        }
+        .cc2 {
+          p.txt03 {
+            position: absolute;
+            top: 370px;
+          }
+        }
+      }
+    }
+    @media screen and(max-width: 799px) {
+      height: 154vw;
+      max-height: 620px;
+      // padding-top: 7vw;
+      .slide {
+        display: none;
+      }
+      .sp-slide {
+        img {
+          width: 100%;
+        }
+      }
+      .cc-wrap {
+        .cc1 {
+          p.txt01 {
+            font-size: 22px;
+          }
+          p.txt02 {
+            font-size: 22px;
+            position: absolute;
+            top: 270px;
+          }
+        }
+        .cc2 {
+          p.txt03 {
+            font-size: 2vw;
+            position: absolute;
+            top: 338px;
+          }
+        }
+      }
+    }
     @media screen and (min-width: 1900px) {
       .cc-wrap {
         p.txt01,
@@ -106,6 +156,11 @@
         }
       }
     }
+    @media screen and(min-width: 800px) {
+      .sp-slide {
+        display: none;
+      }
+    }
   }
   .feature {
     @include ttl-block;
@@ -117,14 +172,16 @@
       justify-content: space-between;
       align-items: center;
       .feature-block {
-        width: 280px;
-        // height: 410px;
+        // width: 280px;
+        width: 28%;
+        min-height: 315px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         border-radius: 10px;
         border: 1px solid #dddddd;
         padding: 1rem;
         .f-icon {
-          width: 160px;
+          // width: 160px;
+          width: 34%;
           margin: 0 auto;
           img {
             width: 100%;
@@ -141,6 +198,7 @@
           p {
             text-align: justify;
             margin-bottom: 0;
+            @include base-p2;
           }
         }
       }
@@ -148,9 +206,32 @@
     .detail-btn {
       @include detail-btn;
     }
+    @media screen and(max-width: 999px) {
+      .feature-container {
+        .feature-block {
+          min-height: 280px;
+        }
+      }
+    }
+    @media screen and(max-width: 799px) {
+      .feature-container {
+        display: block;
+        .feature-block {
+          width: 85%;
+          margin: 0 auto;
+          min-height: 255px;
+          margin-bottom: 2rem;
+        }
+      }
+    }
+    @media screen and(min-width: 1000px) {
+      br {
+        display: none;
+      }
+    }
   }
   .service {
-    padding: 1rem 0 !important;
+    padding: 1rem 1rem !important;
     background: #f3f3f3;
     @include ttl-block;
     .service-container {
@@ -173,6 +254,12 @@
     .question-container {
       .detail-btn {
         @include detail-btn;
+      }
+    }
+    @media screen and(max-width: 799px) {
+      padding: 1rem 20px !important;
+      .ttl-block p br {
+        display: none
       }
     }
   }
@@ -216,7 +303,7 @@
               h3 {
                 margin-bottom: 0;
                 margin-top: 0.75rem;
-                line-height: 1.75rem;
+                line-height: 1.5rem;
               }
             }
             &:hover {
@@ -233,6 +320,31 @@
       }
       .detail-btn {
         @include detail-btn;
+      }
+    }
+    @media screen and(max-width: 999px) {
+      .blog-container .blog-wrap .blog-block a {
+        .blog-text h3 {
+          font-size: 1.1rem;
+        }
+      }
+    }
+    @media screen and(max-width: 799px) {
+      padding: 0 20px;
+      .ttl-block p br {
+        display: none
+      }
+      .blog-container {
+        .blog-wrap {
+          display: block;
+          .blog-block {
+            width: 85%;
+            margin: 0 auto;
+            min-height: auto;
+            margin-bottom: 2rem;
+
+          }
+        }
       }
     }
   }
